# conductor-python

./: .gitignore  .pylintrc  Dockerfile  README.md  conductor_apps.md  example.py  installer.sh  python_sdk_server_pojo_mapping.json  requirements.txt  setup.cfg  setup.py  workers.md  workflows.md
docs/: AdminResourceApi.md  BulkResponse.md  EventResourceApi.md  ExternalStorageLocation.md  RerunWorkflowRequest.md  SearchResultWorkflow.md  StartWorkflowRequest.md  SubWorkflowParams.md  Task.md  TaskDef.md  TaskExecLog.md  TaskSummary.md  WorkflowBulkResourceApi.md  WorkflowResourceApi.md  WorkflowTask.md  conductor.client.automator.md  conductor.client.automator.task_runner.md  conductor.client.configuration.md  conductor.client.configuration.settings.md  conductor.client.http.api.md  conductor.client.http.api.scheduler_resource_api.md  conductor.client.http.api.task_resource_api.md  conductor.client.http.api.token_resource_api.md  conductor.client.http.api.workflow_resource_api.md  conductor.client.http.api_client.md  conductor.client.http.md  conductor.client.http.models.action.md  conductor.client.http.models.conductor_application.md  conductor.client.http.models.conductor_user.md  conductor.client.http.models.create_or_update_application_request.md  conductor.client.http.models.group.md  conductor.client.http.models.poll_data.md  conductor.client.http.models.rate_limit.md  conductor.client.http.models.rerun_workflow_request.md  conductor.client.http.models.role.md  conductor.client.http.models.save_schedule_request.md  conductor.client.http.models.scrollable_search_result_workflow_summary.md  conductor.client.http.models.search_result_task.md  conductor.client.http.models.search_result_task_summary.md  conductor.client.http.models.search_result_workflow_schedule_execution_model.md  (+36 more)
examples/: README.md  ai_orchestrator_example.py  azure_open_ai_example.py  dynamic_workflow.py  dynamic_workflows.py  greetings.py  greetings_main.py  greetings_workflow.py  hello_world.py  kitchensink.py  main.py  open_ai_chat_example.py  open_ai_chat_gpt.py  open_ai_chat_user_input.py  open_ai_example.py  open_ai_function_example.py  open_ai_helloworld.py  prompt_testing.ipynb  shell_worker.py  sync_updates.py  task_configure.py  task_status_change_audit.py  task_workers.py  test_workflows.py  untrusted_host.py  vector_db_helloworld.py  vertex_ai_example.py  wait_for_webhook.py  workflow.json  workflow_ops.py  workflow_rerun.py  workflow_status_listner.py  workflow_testing.py
script/: .gitignore  sync_conductor_apis.sh
src/: configuration.py  test.ipynb
tests/: integration.py  main.py
tst/: test_action.py  test_admin_resource_api.py  test_event_handler.py  test_external_storage_location.py  test_health.py  test_health_check_resource_api.py  test_health_check_status.py  test_metadata_resource_api.py  test_poll_data.py  test_rerun_workflow_request.py  test_search_result_task.py  test_search_result_task_summary.py  test_skip_task_request.py  test_start_workflow.py  test_start_workflow_request.py  (+10 more)
(+643 files in other folders)
