[metadata]
name = conductor-python
version = 1.0.12
author = Gustavo Gardusi
author_email = gustavo.gardusi@gmail.com
description = Netflix Conductor Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/conductor-sdk/conductor-python
classifiers =
	Intended Audience :: Developers
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Topic :: Internet
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Networking
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	certifi >= 14.05.14
	six >= 1.10
	setuptools >= 21.0.0
	urllib3 >= 1.15.1
	prometheus-client >= 0.13.1

[options.packages.find]
where = src
