[metadata]
name = conductor-python
author = Orkes
author_email = developers@orkes.io
description = Netflix Conductor Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/conductor-sdk/conductor-python
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	certifi >= 14.05.14
	prometheus-client >= 0.13.1
	six >= 1.10
	requests >= 2.28.1
    typing-extensions >= 4.2.0

[options.packages.find]
where = src
